fixing mobile menu; fixing header top; fixing home hero text overflow

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -334,7 +334,7 @@
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 801px) {
   #hamburger {
     display: block;
     z-index: 11;
@@ -377,6 +377,10 @@
          -o-transition: all 610ms cubic-bezier(0,.85,.55,1);
             transition: all 610ms cubic-bezier(0,.85,.55,1);
     overflow: scroll;
+
+    @include breakpoint("small") {
+      top: 120px;
+    }
   }#main-menu.active {
     -webkit-transform: translateX(100%);
        -moz-transform: translateX(100%);
@@ -483,12 +487,13 @@
   }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 802px) {
   #main-menu {
     display: block;
     position: relative;
-    width: 920px;
+    max-width: 72rem;
     height: 35px;
+    padding: 0 1.5rem;
     margin: 0 auto;
     text-shadow: 1px 1px 1px rgba(255,255,255,.5);
   }
@@ -535,11 +540,19 @@
     padding: 0 17px;
     color: #555555;
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 300;
     line-height: 35px;
     text-decoration: none;
     text-transform: uppercase;
+
+    @media screen and (min-width: 900px) {
+      font-size: 22px;
+    }
+
+    @media screen and (min-width: 1100px) {
+      font-size: 28px;
+    }
 
     &:nth-child(3) > a {
       color: #f9401f;
