--- a/assets/scss/components/stencil/navUser/_navUser.scss
+++ b/assets/scss/components/stencil/navUser/_navUser.scss
@@ -15,15 +15,21 @@
     @include nav($style: "navBar", $wrapper: "nav");
     @include verticalPositionMiddle("absolute");
     right: 0;
-    top: 26px; // 2
-    width: 100%; // 4
-    z-index: zIndex("lowest"); // 5.
+    top: 26px;
+    width: 100%;
+    z-index: zIndex("lowest");
+
+    @include breakpoint("small") {
+        top: 85px;
+    }
 
     @include breakpoint("medium") {
         padding: 0 spacing("single");
         position: relative;
         right: auto;
         top: auto;
+        max-width: 72rem;
+        margin: auto;
         transform: none;
         z-index: zIndex("high");
     }
