--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -23,6 +23,10 @@
     opacity: 0.97;
     z-index: zIndex("low");
 
+    @include breakpoint("small") {
+        min-height: 120px;
+    }
+
     @include breakpoint("medium") {
         position: relative;
         overflow: visible;
@@ -33,6 +37,49 @@
 
         @include breakpoint("medium") {
             height: auto;
+        }
+    }
+
+    &__promo {
+        display: none;
+        background-color: stencilColor("color-aql");
+        color: white;
+
+        @include breakpoint("small") {
+            display: block;
+        }
+
+        .container {
+            display: flex;
+            padding: 5px 20px;
+        }
+
+        &__caption,
+        &__shipping {
+            width: 50%;
+        }
+
+        &__shipping {
+            text-align: right;
+        }
+
+        &__phone {
+            display: inline-block;
+            padding: 0px 15px;
+            margin: 0 10px;
+            border-radius: 3px;
+            box-shadow: 0 0 0 1px rgba(255,255,255,0.6);
+            background: rgba(255,255,255,0.2);
+            color: white;
+            font-weight: 600;
+            text-decoration: none;
+
+            &:hover,
+            &:active,
+            &:focus {
+                color: white;
+                text-shadow: 0 0 10px white;
+            }
         }
     }
 }
